--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,1 +1,3 @@
-.container { width: 1200px; height: 100%; background-color: antiquewhite; }
+.container { height: 100%; background-color: antiquewhite; }
+.full-container { height: 100%; background-color: antiquewhite; }
+.text-center { text-align: center; }
