--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -11,10 +11,13 @@
 
 
 html {
+  height:100%;
 }
 
 body {
-  > #root {
+  height: 100%;
+  > #app {
+    height: 100%;
   }
 }
 
@@ -28,7 +31,18 @@ body {
 
 .container {
   height: 100%;
-  background-color: antiquewhite;
+  display:flex;
+  flex-direction: column;
+  .header {
+    height:100px;
+    background:var(--color-balck);
+    flex:0 0;
+  }
+  .footer {
+    height: 100px;
+    background: var(--color-balck);
+    flex: 0 0;
+  }
 }
 
 .full-container {
