--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -36,20 +36,91 @@ body {
   .header {
     height:100px;
     background:var(--color-balck);
-    flex:0 0;
   }
   .footer {
     height: 100px;
     background: var(--color-balck);
-    flex: 0 0;
+  }
+  .contents-wrap {
+    overflow: hidden;
+    overflow-y: auto;
+    position: relative;
+    flex: 1 1;
   }
 }
 
-.full-container {
-  height: 100%;
-  background-color: antiquewhite;
+/** LOGIN */
+.login-wrapper {
+  position: relative;
+  z-index: 3;
 }
+.login-wrap {
+  position: relative;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 
-.text-center {
-  text-align: center;
+  .img {
+    position:absolute; left:0; top:0;
+    margin: 0;
+    padding: 0;
+    opacity: 0 !important;
+    visibility: hidden !important;
+    width: 100%;
+    height: 100%;
+    transition:all 0.5s ease-out;
+    &.active {
+      transition: all 0.5s ease-out;
+      opacity: 1 !important;
+      visibility: visible !important;
+    }
+  }
+
+  .img-1 {
+    background: url(../images/login/img-login-1.jpeg) no-repeat center center;
+    background-size: cover;
+  }
+
+  .img-2 {
+    background: url(../images/login/img-login-2.jpeg) no-repeat center center;
+    background-size: cover;
+  }
+
+  .img-3 {
+    background: url(../images/login/img-login-3.jpeg) no-repeat center center;
+    background-size: cover;
+  }
+
+  .img-4 {
+    background: url(../images/login/img-login-4.jpeg) no-repeat center center;
+    background-size: cover;
+  }
+
+  .img-5 {
+    background: url(../images/login/img-login-5.jpeg) no-repeat center center;
+    background-size: cover;
+  }
+
+  .dots {
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+    z-index:2;
+    width: max-content;
+    display:flex;
+    gap:10px;
+    li {
+      width:10px; height:10px;
+      background: #000;
+      border-radius: 10px;
+
+      &.active {
+        background: #ccc;
+      }
+    }
+  }
 }
