--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -46,6 +46,7 @@ body {
     overflow-y: auto;
     position: relative;
     flex: 1 1;
+    max-width:1920px;
   }
 }
 
@@ -124,3 +125,20 @@ body {
     }
   }
 }
+
+/** LEFT MENU */
+.left-menu-wrap {
+  height:100%;
+  background:var(--color-black);
+  .one-depth {
+    .one {
+      height:toRem(100);
+      display:flex;
+      flex-direction: column;
+    }
+  }
+}
+
+/** TOP MENU */
+
+/** MOBILE MENU */
