--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,1 +1,47 @@
 @charset "utf-8";
+/*
+*
+*
+* input box 버튼, 등 기타
+*
+*
+*/
+
+.textarea-area {
+    position: relative;
+    border: 1px solid $inputBorder;
+    background-color: var(--color-white);
+    width: 100%;
+    height: 250px;
+    padding: 15px 12px;
+
+    textarea {
+        @include font(body, 16);
+        height: 100%;
+        width: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        border: none;
+        &::placeholder {
+            color: $placeHolder;
+        }
+    }
+}
+
+
+.input {
+    border: 1px solid $inputBorder;
+    height: 47px;
+    padding: 11px 14px;
+    color: var(--color-black);
+    @include font(regular, 16);
+    width: 100%;
+    background-color: var(--color-white);
+
+    &::placeholder {
+        color: $placeHolder;
+    }
+}
+
