--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -7,7 +7,7 @@
 *
 */
 
-.textarea-area {
+textarea.textarea-area {
     position: relative;
     border: 1px solid $inputBorder;
     background-color: var(--color-white);
@@ -31,12 +31,13 @@
 }
 
 
-.input {
-    border: 1px solid $inputBorder;
+input.input {
+    border: 1px solid var(--color-border);
+    border-radius: toRem(3);
     height: 47px;
     padding: 11px 14px;
     color: var(--color-black);
-    @include font(regular, 16);
+    @include font(regular, 13);
     width: 100%;
     background-color: var(--color-white);
 
@@ -45,3 +46,45 @@
     }
 }
 
+.checkbox {
+    display: flex;
+    align-items: center;
+
+    input {
+        display: none;
+        all: unset;
+
+        &+label {
+            @include font(regular, 13);
+            word-break: keep-all;
+            height: toRem(18);
+            line-height: toRem(18);
+            color: var(--color-primary);
+            display:flex;
+            align-items: center;
+            gap:toRem(4);
+        }
+        &:checked+label {
+            background: url('../images/common/ic-check-off.svg') no-repeat 0 center / contain;
+            background-size: toRem(18) toRem(18);
+        }
+    }
+}
+
+button.login {
+    border-radius: toRem(5);
+    background: var(--color-primary);
+    color: var(--color-white);
+    @include font(bold,13);
+    height:toRem(32);
+}
+
+.icon-text {
+    display: flex;
+    align-items: center;
+    gap: toRem(4);
+    p {
+        @include font(regular, 13);
+        color: var(--color-primary);
+    }
+}
