--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -189,21 +189,7 @@ body {
       top:0;
     }
   }
-  h1.logo {
-    width:280px;
-    background-color: var(--color-primary-dark);
-    
-    display: flex;
-    height: 48px;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 0 toRem(15);
-    cursor: pointer;
-
-    img {
-      width: toRem(100);
-    }
-  }
+  
 
   .header {
     width: 100%;
@@ -215,11 +201,28 @@ body {
     // align-items: baseline;
     height: 0;
     transition: all 0.4s ease-out;
+    background-color: var(--color-primary-white-fixed);
+    // &:hover {
+    //   background: linear-gradient(to bottom, var(--color-primary) 0%, var(--color-primary) 48px, var(--color-primary-dark) 48px, var(--color-primary-dark) 100%);
+    // }
    
     &.active {
       height:190px;
-      background-color: var(--color-primary-white-fixed);
-      
+    }
+    h1.logo {
+      width: 280px;
+      background-color: var(--color-primary-dark);
+
+      display: flex;
+      height: 48px;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0 toRem(15);
+      cursor: pointer;
+
+      img {
+        width: toRem(100);
+      }
     }
 
     .one-depth {
@@ -228,12 +231,14 @@ body {
       flex-direction: row;
       justify-content: space-between;
       align-items: baseline;
-      background-color: var(--color-primary);
+      // background-color: var(--color-primary);
       transition: all 0.4s ease-out;
       &:hover {
-        background-color: var(--color-primary-white-fixed);
+        // background-color: var(--color-primary-white-fixed);
+        background: linear-gradient(to bottom, var(--color-primary) 0%, var(--color-primary) 48px, var(--color-primary-dark) 48px, var(--color-primary-dark) 100%);
+        height:200px;
         .one {
-          color: var(--color-gray-text);
+          // color: var(--color-gray-text);
         }
       }
 
@@ -244,7 +249,7 @@ body {
         align-items: center;
         justify-content: center;
         gap: 6px;
-        color: var(--color-primary-white-fixed);
+        color: var(--color-primary);
         // background: var(--color-primary);
         transition: all 0.4s ease-out;
         position:relative;
@@ -331,6 +336,8 @@ body {
 
 /** LEFT MENU */
 .left-menu-wrap {
+  position:relative;
+  left:-280px;
   width: 0;
   height: 100%;
   overflow: hidden;
@@ -349,6 +356,7 @@ body {
 
   &.active {
     width: 280px;
+    left:0;
   }
 
   h1.logo {
