--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -207,10 +207,10 @@ body {
     // }
    
     &.active {
-      height:190px;
+      // height:190px;
     }
     h1.logo {
-      width: 280px;
+      width: 150px;
       background-color: var(--color-primary-dark);
 
       display: flex;
@@ -229,16 +229,20 @@ body {
       flex: 1 1;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      // justify-content: space-between;
       align-items: baseline;
       // background-color: var(--color-primary);
+      height:48px;
       transition: all 0.4s ease-out;
-      &:hover {
+      overflow: hidden;
+      // border-bottom: 1px solid var(--color-border);
+      &.hover {
         // background-color: var(--color-primary-white-fixed);
         background: linear-gradient(to bottom, var(--color-primary) 0%, var(--color-primary) 48px, var(--color-primary-dark) 48px, var(--color-primary-dark) 100%);
         height:200px;
+        border-bottom: 1px solid var(--color-border);
         .one {
-          // color: var(--color-gray-text);
+          color: var(--color-primary-white-fixed);
         }
       }
 
@@ -248,6 +252,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        width:120px;
         gap: 6px;
         color: var(--color-primary);
         // background: var(--color-primary);
@@ -261,6 +266,7 @@ body {
 
         &:hover {
           color: var(--color-primary);
+          background: var(--color-primary-white-fixed);
           .two-depth {
             top: 48px;
             opacity: 1;
@@ -271,51 +277,53 @@ body {
       }
 
       .two-depth {
-        position:absolute; top:70px; left:0;
+        position:absolute; top:48px; left:0;
         opacity: 0;
         visibility: hidden;
+        width:120px;
         transition: all 0.4s ease-out;
-        padding:0 toRem(10);
+        padding:toRem(4) toRem(15);
+        border-left: 1px solid var(--color-border);
+        border-right: 1px solid var(--color-border);
         .two {
           >.boxs {
             display: flex;
             align-items: center;
-            padding: toRem(13) 0;
+            padding: toRem(7) 0;
             color: var(--color-primary);
             .arr {
               width: toRem(12);
               height: toRem(12);
               display: block;
               background: url(../images/common/menu-arrow.svg) no-repeat center center;
-              rotate: 0;
+              rotate: 270deg;
               transition: all 0.4s ease-out;
             }
           }
 
           &:hover {
-            >.boxs {}
-
             .arr {
-              rotate: 180deg;
+              // rotate: 90deg;
             }
 
             .three-depth {
-              height: auto;
-              padding: toRem(5) 0;
+              opacity: 1;
             }
           }
         }
       }
 
       .three-depth {
-        height: 0;
-        max-height: 500px;
+        position:absolute; left:120px; top:0;
+        border-right: 1px solid var(--color-border);
+        opacity: 0;
+        width:120px;
         overflow: hidden;
         transition: all 0.4s ease-out;
-        padding: 0;
+        padding: toRem(4) 0;
 
         .three {
-          padding: toRem(6) toRem(30);
+          padding: toRem(7) toRem(15);
           color: var(--color-primary);
 
           &:hover {
@@ -396,6 +404,7 @@ body {
       &.active {
         .two-depth {
           opacity: 1;
+          z-index:1;
         }
       }
 
@@ -408,6 +417,7 @@ body {
       right: 0;
       top: 0;
       opacity: 0;
+      z-index:0;
       transition: all 0.4s ease-out;
       *{color: var(--color-primary-text);}
       .two {
