--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -229,9 +229,8 @@ body {
       flex: 1 1;
       display: flex;
       flex-direction: row;
-      // justify-content: space-between;
       align-items: baseline;
-      // background-color: var(--color-primary);
+      background-color: var(--color-primary-dark);
       height:48px;
       transition: all 0.4s ease-out;
       overflow: hidden;
